--- a/angular-app/styles/main.css
+++ b/angular-app/styles/main.css
@@ -7072,6 +7072,38 @@ label {
   top: 49%;
   z-index: -2; }
 
+.page-signin .auth-form input {
+  width: 100%;
+  height: 55px;
+  border: none;
+  text-transform: uppercase; }
+
+.page-signin .auth-form input[type="text"],
+.page-signin .auth-form input[type="password"] {
+  padding: 0 30px;
+  font-style: italic;
+  font-weight: bold;
+  background-color: rgba(255, 255, 255, 0.7); }
+
+.page-signin .auth-form input[type="submit"] {
+  color: #fff;
+  background-color: rgba(59, 214, 178, 0.7);
+  -webkit-border-radius: 0px;
+  -moz-border-radius: 0px;
+  -ms-border-radius: 0px;
+  -o-border-radius: 0px;
+  border-radius: 0px; }
+
+.page-signin .auth-form a {
+  color: #fff;
+  font-weight: bold;
+  font-style: italic;
+  margin: 10px 0px;
+  display: inline-block; }
+
+.page-signin .auth-form a.create-account {
+  color: #3bd6b2; }
+
 .page-profile img.media-object {
   -webkit-border-radius: 0px;
   -moz-border-radius: 0px;
@@ -7307,6 +7339,11 @@ label {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover; }
+
+#footer {
+  padding: 10px;
+  color: #fff;
+  text-transform: uppercase; }
 
 /************************************
 18 - Ajax loading
