--- a/angular-app/styles/main.scss
+++ b/angular-app/styles/main.scss
@@ -7449,6 +7449,34 @@ button.toast-close-button {
   top: 49%;
   z-index: -2;
 }
+.page-signin .auth-form input {
+    width: 100%;
+    height: 55px;
+    border: none;
+    text-transform: uppercase;
+}
+.page-signin .auth-form input[type="text"],
+.page-signin .auth-form input[type="password"], {
+    padding: 0 30px;
+    font-style: italic;
+    font-weight: bold;
+    background-color: rgba(255, 255, 255, .7);
+}
+.page-signin .auth-form input[type="submit"] {
+    color: #fff;
+    background-color: rgba(59, 214, 178, .7);
+    @include border-radius(0px);
+}
+.page-signin .auth-form a {
+    color: #fff;
+    font-weight: bold;
+    font-style: italic;
+    margin: 10px 0px;
+    display: inline-block;
+}
+.page-signin .auth-form a.create-account {
+    color: rgb(59, 214, 178);
+}
 
 .page-profile img.media-object {
   @include border-radius(0px);
@@ -7732,6 +7760,12 @@ button.toast-close-button {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+}
+
+#footer {
+    padding: 10px;
+    color: #fff;
+    text-transform: uppercase;
 }
 
 /************************************
