--- a/resources/assets/sass/directives/ui-avatar.scss
+++ b/resources/assets/sass/directives/ui-avatar.scss
@@ -8,7 +8,8 @@
 .ui-avatar-container {
     position: relative;
     margin: 0 auto;
-    width: 100%;
+    width: 1px;
+    @include transition(width .8s);
 
     .ui-avatar-button {
         display: inline-block;
