--- a/resources/assets/sass/partials/_overlays.scss
+++ b/resources/assets/sass/partials/_overlays.scss
@@ -33,6 +33,16 @@
     -moz-transition: all .3s ease-in-out;
     -o-transition: all .3s ease-in-out;
     transition: all .3s ease-in-out;
+
+    .page-loading-escape {
+        color: #bbb;
+        margin: 30px 0 0 30px;
+        display: inline-block;
+
+        &:active {
+            color: $heddokogreen;
+        }
+    }
 }
 .page-loading-overlay.loaded,
 .loader.loaded,
