--- a/resources/angular-views/partials/header.html
+++ b/resources/angular-views/partials/header.html
@@ -19,7 +19,7 @@
 			</li>
 
             <!-- Account -->
-            <li ng-show="global.isLocal" class="dropdown text-normal nav-profile">
+            <!-- <li ng-show="global.isLocal" class="dropdown text-normal nav-profile">
                 <a
                     href="javascript:;"
                     class="dropdown-toggle"
@@ -31,7 +31,6 @@
                     <i class="fa fa-user"></i>
                 </a>
 
-                <!-- Account links -->
                 <div
                     class="dropdown-menu with-arrow pull-left panel panel-default"
                     aria-labelledby="menuAccountDropdown">
@@ -51,7 +50,7 @@
                         </li>
                     </ul>
                 </div>
-            </li>
+            </li> -->
 		</ul>
 
         <ul class="nav-right list-unstyled">
