--- a/resources/assets/sass/partials/_overlays.scss
+++ b/resources/assets/sass/partials/_overlays.scss
@@ -35,13 +35,10 @@
     transition: all .3s ease-in-out;
 
     .page-loading-escape {
-        color: #bbb;
+        color: $heddokogreen;
         margin: 30px 0 0 30px;
         display: inline-block;
-
-        &:active {
-            color: $heddokogreen;
-        }
+        font-size: 32px;
     }
 }
 .page-loading-overlay.loaded,
