--- a/resources/assets/sass/partials/_pages.scss
+++ b/resources/assets/sass/partials/_pages.scss
@@ -7,26 +7,30 @@
 /**
  * Angular - Page headers.
  */
+@mixin section-title($color: $text-color) {
+    margin: none;
+    display: inline-block;
+    text-transform: uppercase;
+    color: $color;
+
+    .fa {
+        font-size: 0.9em;
+        margin: auto 10px;
+    }
+
+    span {
+        margin: 10px 0 0;
+        display: block;
+        width: 90%;
+        height: 4px;
+        background-color: $color;
+    }
+}
 .page > header {
     margin: 0 20px 20px;
 
     h1 {
-        margin: none;
-        display: inline-block;
-        text-transform: uppercase;
-
-        .fa {
-            font-size: 0.9em;
-            margin: auto 10px;
-        }
-
-        span {
-            margin: 10px 0 0;
-            display: block;
-            width: 90%;
-            height: 4px;
-            background-color: $text-color;
-        }
+        @include section-title();
     }
 
     .h1-append {
@@ -53,8 +57,8 @@
     }
 }
 
-h1.title, h2.title {
-
+h1.title, h2.title, h3.title {
+    @include section-title();
 }
 
 /*
@@ -94,6 +98,11 @@ h1.title, h2.title {
         display: inline-block;
         height: 345px;
         width: 345px;
+    }
+
+    .profile-shortcuts a {
+        margin: 10px;
+        display: inline-block;
     }
 }
 
