--- a/resources/angular-views/partials/navigation.html
+++ b/resources/angular-views/partials/navigation.html
@@ -24,19 +24,15 @@
             </a>
         </li>
 
+        <!-- Groups -->
 		<li>
             <!-- List of groups -->
-            <a ng-show="global.state.group.list.length > 0" href="#/group/list">
+            <a ng-if="global.data.group && global.data.group.list.length > 0" href="#/group">
                 <i class="fa fa-users"></i>
                 <span>Teams</span>
-                <!-- <span class="pull-right">
-                    <small>
-                        ( {{ global.state.group.list.length }} )
-                    </small>
-                </span> -->
             </a>
 
-            <ul ng-show="global.state.group.list.length > 0" style="display: block">
+            <ul ng-if="global.data.group && global.data.group.list.length > 0" style="display: block">
                 <li>
                     <a href="#/group/{{ global.getSelectedGroup().id }}">
                         <i class="fa fa-angle-right"></i>
@@ -49,55 +45,48 @@
                         <span>View All Teams</span>
                     </a>
                 </li>
-
-                <!-- Disabled until we're sure we only need the "modal" form on the group listing page -->
-                <li ng-show="false">
-                    <a href="#/group/create">
-                        <i class="fa fa-angle-right"></i>
-                        <span>Create a Team</span>
-                    </a>
-                </li>
             </ul>
 
             <!-- Fetching groups -->
-            <a ng-show="global.data.isFetchingGroups === true" href="javascript:;">
+            <a ng-if="global.data.isFetchingGroups === true" href="javascript:;">
                 <i class="fa fa-spinner fa-spin"></i>
                 <span>Teams</span>
             </a>
 
             <!-- No groups available -->
             <a
-                ng-show="global.data.isFetchingGroups === false &&
-                    global.state.group.list.length === 0"
-                href="#/group/create">
+                ng-if="global.data.isFetchingGroups === false &&
+                    global.data.group.list.length === 0"
+                href="javascript:;">
 
                 <i class="fa fa-users"></i>
                 <span>Create a Team</span>
             </a>
         </li>
 
+        <!-- Profiles -->
 		<li>
-            <!-- List of athletes -->
-            <a ng-show="global.getNamespaceLength('profile') > 0" href="#/profile/list">
+            <!-- List of profiles -->
+            <a ng-if="global.data.profile && global.data.profile.list.length > 0" href="#/profile">
                 <i class="fa fa-user"></i>
                 <span>Athletes</span>
                 <span class="pull-right">
                     <small>
-                        ( {{ global.getNamespaceLength('profile') }} )
+                        ( {{ global.data.profile.list.length }} )
                     </small>
                 </span>
             </a>
 
             <!-- Fetching profiles -->
-            <a ng-show="global.data.isFetchingProfiles === true" href="javascript:;">
+            <a ng-if="global.data.isFetchingProfiles === true" href="javascript:;">
                 <i class="fa fa-spinner fa-spin"></i>
                 <span>Athletes</span>
             </a>
 
             <!-- No profiles available -->
             <a
-                ng-show="global.data.isFetchingProfiles === false &&
-                    global.getNamespaceLength('profile') === 0"
+                ng-if="global.data.isFetchingProfiles === false &&
+                    global.data.profile.list.length === 0"
                 href="#/profile/create">
 
                 <i class="fa fa-user"></i>
@@ -236,20 +225,5 @@
         <li class="app-version">
             {{ global.appVersion }}
 		</li>
-
-		<!-- <li ng-controller="MovementScreenController" ng-show="Rover.isLocal == true">
-            <a href="#/movements"><span>movement screen</span></a>
-			<ul style="display: block;">
-                <li ng-repeat="movement_page in data.movement_pages">
-					<a
-                        href="#/movements"
-                        ng-click="select_movement(movement_page)">
-
-                        <i ng-if="movement_page.submitted" class="fa fa-2x fa-check" style="color:white;"></i>
-                        <span>{{movement_page.name}}</span>
-                    </a>
-				</li>
-            </ul>
-        </li> -->
     </ul>
 </div>
